# sol-x

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/solx_ast/: Cargo.toml
crates/solx_ast/src/: lib.rs
crates/solx_cli/: Cargo.toml
crates/solx_cli/src/: main.rs
crates/solx_codegen/: Cargo.toml
crates/solx_codegen/src/: lib.rs
crates/solx_hir/: Cargo.toml
crates/solx_hir/src/: lib.rs
crates/solx_parser/: Cargo.toml
crates/solx_parser/src/: lib.rs
docs/: architecture.md  language.md  roadmap.md
examples/counter/: program.solx
examples/counter/src/: lib.rs
examples/escrow/: program.solx
my_counter/: Anchor.toml  Cargo.toml
my_counter/src/: lib.rs  program.solx
my_counter2/: Anchor.toml  Cargo.toml
my_counter2/src/: lib.rs  program.solx
