[workspace]
members = [
    "crates/solx_ast",
    "crates/solx_parser",
    "crates/solx_hir",
    "crates/solx_codegen",
    "crates/solx_cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SOL-X Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/solxapp/sol-x"

[workspace.dependencies]
logos = "0.14"
chumsky = "0.9"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
