[package]
name = "my_counter"
version = "0.1.0"
description = "Generated Anchor program from SOL-X"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "my_counter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
